--- a/install.html
+++ b/install.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <form id="formInstall" onsubmit="handleFormsubmit(this)" name="formInstall">
+    <form id="formInstall" onsubmit="handleFormSubmit(this)" name="formInstall">
         <div>
             <label for="id-doc-paramters">Id doc parameters:
 
